move it to alpha version

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: "CMS Data Analysis School 2024: Jet Analysis Short Exercise "
 # 'transition-step-2': notice encouraging to use new version
 # 'transition-step-3': notice indicating the lesson is deprecated,
 #                      with automated redirect
-life_cycle: "pre-alpha"
+life_cycle: "alpha"
 
 # For lessons in the life stages in 'transition-step-1' or later:
 # - 'transition_url' holds the URL for the version of the lesson that
