--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "HATS@LPC 2024: Jets"
+title: "CMSDAS@LPC 2025: Jets Short Exercise"
 
 # Life cycle stage of the lesson
 # See this page for more details: https://cdh.carpentries.org/the-lesson-life-cycle.html
